thêm ảnh logo vào client

--- a/src/main/resources/templates/WebKhachHang/list-all.html
+++ b/src/main/resources/templates/WebKhachHang/list-all.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" href="/image/ACV.png" type="image/png" sizes="32x32"/>
 
     <!-- Styles -->
     <style>
