--- a/src/main/resources/templates/WebKhachHang/rut-tien.html
+++ b/src/main/resources/templates/WebKhachHang/rut-tien.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="/image/ACV.png" type="image/png" sizes="32x32"/>
 
   <style>
     :root {
