--- a/src/main/resources/templates/WebKhachHang/kh_quenmatkhau.html
+++ b/src/main/resources/templates/WebKhachHang/kh_quenmatkhau.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Quên mật khẩu - ACV 360</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="/image/ACV.png" type="image/png" sizes="32x32"/>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f9f9f9; }
         .container { max-width: 400px; margin: 100px auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
