--- a/src/main/resources/templates/WebKhachHang/reset-password.html
+++ b/src/main/resources/templates/WebKhachHang/reset-password.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="/image/ACV.png" type="image/png" sizes="32x32"/>
   <style>
     :root {
       --primary-color: #153054;
